# psvm

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  meson.build  vcpkg.json
cmake/: ClangFormat.cmake  Nodejs.cmake  ccache.cmake
docs/: CMakeLists.txt  Doxyfile.in  TODO.md  conf.py  index.rst
include/: README.txt  psvm.hpp  quickjspp.hpp
include/psvm/: psvm.hpp
psvm/: CMakeLists.txt
psvm/include/: psvmjs.hpp
psvm/lib/: CMakeLists.txt
psvm/src/: CMakeLists.txt  psvm.cpp  psvm.hpp
psvm/test/: CMakeLists.txt  test_driver.cpp
psvmjs/: package.json  pnpm-lock.yaml
psvmjs/scripts/: build.js
psvmjs/src/: globalize.js  main.ts
src/: CMakeLists.txt  inline.js  psvm.c  psvm.cpp  psvm.hpp  test_driver.cpp
src/psvmjs/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
src/psvmjs/src/: globalize.js  main.ts
subprojects/: quickjs-ng.wrap  quickjs.wrap  stduuid.wrap
subprojects/packagefiles/quickjs/: build_qjsc.diff  msvc.diff  version_conflict.diff
subprojects/packagefiles/quickjs/overlay/: getopt.c  getopt.h  meson.build
subprojects/packagefiles/quickjs/overlay/msvc/: dirent.h
subprojects/psvmjs/: clean_bytecode.py  meson.build  meson_wrapper.py  package-lock.json  package.json
subprojects/psvmjs/include/: psvmjs.h
subprojects/psvmjs/js_src/: eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml
subprojects/psvmjs/js_src/scripts/: build.js  esbuild.mjs
subprojects/psvmjs/js_src/src/: index.ts  main.ts
subprojects/psvmjs/scripts/: meson_wrapper.py  meson_wrapper.sh
subprojects/psvmjs/src/: globalize.js  main.ts
test/: CMakeLists.txt  test_driver.cpp
